product service class with recurise SOQL completed

--- a/force-app/main/default/classes/VDT_ProductAdoptionController.cls
+++ b/force-app/main/default/classes/VDT_ProductAdoptionController.cls
@@ -34,4 +34,15 @@ public inherited sharing class VDT_ProductAdoptionController {
             throw new AuraHandledException(e.getMessage());
         }
     }
+
+    @AuraEnabled
+    public static List<VDT_ProductService.ProductCatalogTreeItem> getProductCatalogTree() {
+        try {
+            return VDT_ProductService.getProductTreeInformation();
+        } catch (Exception e) {
+            VDT_Log.get().add(e.getMessage() + '\n' + e.getStackTraceString(), VDT_LogSeverity.ERROR);
+            VDT_Log.get().publish();
+            throw new AuraHandledException(e.getMessage());
+        }
+    }
 }
